--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "github-react-portfolio-template",
-  "homepage": "https://github.com/kshitij-kj/Portfolio",
+  "homepage": "https://kshitij-kj.github.io/Portfolio",
   "version": "1.0.4",
   "private": true,
   "dependencies": {
